--- a/hadoop.html
+++ b/hadoop.html
@@ -410,7 +410,7 @@
             <h3 class="section-subtitle">HBase Web UI</h3>
             <div class="web-ui-gallery">
                 <div class="ui-item">
-                    <img src="C:\mis\hbase.png" alt="图片描述" style="width:100%; border-radius:6px;">
+                    <img src="hbase.png" alt="图片描述" style="width:100%; border-radius:6px;">
                     <div class="ui-title">HBase管理界面</div>
                     <div class="ui-description">监控HBase集群状态和表信息，<br>查看RegionServer运行状态</div>
                 </div>
