Replace image placeholders with actual images

--- a/hadoop.html
+++ b/hadoop.html
@@ -376,12 +376,12 @@
             <h3 class="section-subtitle">Web UI访问</h3>
             <div class="web-ui-gallery">
                 <div class="ui-item">
-                    <div class="image-placeholder">HDFS NameNode UI截图<br>http://192.168.136.132:9870</div>
+                    <img src="hdfs.png" alt="图片描述" style="width:100%; border-radius:6px;">
                     <div class="ui-title">HDFS管理界面</div>
                     <div class="ui-description">查看HDFS文件系统状态和存储信息，<br>监控数据节点运行状态</div>
                 </div>
                 <div class="ui-item">
-                    <div class="image-placeholder">YARN资源管理器截图<br>http://192.168.136.132:8088</div>
+                    <img src="yarn.png" alt="图片描述" style="width:100%; border-radius:6px;">
                     <div class="ui-title">YARN资源管理</div>
                     <div class="ui-description">监控集群资源和任务执行情况，<br>查看作业运行状态</div>
                 </div>
@@ -484,13 +484,13 @@
                 <div class="dashboard-item">
                     <div class="dashboard-title">Prometheus监控</div>
                     <p>配置Prometheus抓取各节点和服务的监控指标。</p>
-                    <div class="image-placeholder">Prometheus监控界面截图<br>http://hadoop1:9090</div>
+                    <img src="prometheus.png" alt="图片描述" style="width:100%; border-radius:6px;">
                 </div>
                 
                 <div class="dashboard-item">
                     <div class="dashboard-title">Grafana仪表板</div>
                     <p>使用Grafana可视化监控数据，包括系统资源和Hadoop/HBase服务指标。</p>
-                    <div class="image-placeholder">Grafana监控仪表板截图<br>http://hadoop1:3000</div>
+                    <img src="grafana.png" alt="图片描述" style="width:100%; border-radius:6px;">
                 </div>
             </div>
         </div>
