--- a/hadoop.html
+++ b/hadoop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北京交通大学Hadoop集群搭建成果展示</title>
+    <title>Hadoop集群搭建成果展示</title>
     <style>
         * {
             margin: 0;
@@ -491,8 +491,8 @@
         </div>
         
         <footer>
-            <p>北京交通大学 计算机与信息技术学院 | 实验完成时间: 2025年10月</p>
-            <p>© 2025 北京交通大学 大数据实验项目</p>
+            <p>北京交通大学 计算机与信息技术学院 | 虚拟化云计算</p>
+            <p>© 2025 北京交通大学 虚拟化云计算实验</p>
         </footer>
     </div>
 
