--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北京交通大学大数据平台与MIS系统展示</title>
+    <title>大数据平台与数据可视化</title>
     <style>
         * {
             margin: 0;
@@ -231,12 +231,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>北京交通大学大数据平台与MIS系统展示</h1>
-            <p class="subtitle">计算机与信息技术学院 - 云计算与大数据实验项目成果展示</p>
+            <h1>大数据平台与数据可视化</h1>
+            <p class="subtitle">计算机与信息技术学院 - 虚拟化云计算实验</p>
             <div class="student-info">
                 <div>学号：23281283</div>
                 <div>姓名：苏门</div>
-                <div>学院：计算机与信息技术学院</div>
             </div>
         </header>
         
@@ -258,8 +257,8 @@
         <div class="dashboard-container">
             <div class="dashboard-card">
                 <div class="card-icon">📊</div>
-                <h2 class="card-title">MIS系统访问量监控</h2>
-                <p class="card-description">展示北京交通大学MIS系统的实时访问量统计与趋势分析，包括日/周/月访问量数据可视化、用户类型分布和访问来源分析。</p>
+                <h2 class="card-title">MIS系统访问量</h2>
+                <p class="card-description">展示北京交通大学MIS系统的访问量统计与趋势分析，包括日/周/月访问量数据可视化、用户类型分布和访问来源分析。</p>
                 <div class="card-buttons">
                     <a href="mis.html" class="btn">查看访问量统计</a>
                 </div>
@@ -277,7 +276,7 @@
             <div class="dashboard-card">
                 <div class="card-icon">🌐</div>
                 <h2 class="card-title">北京交通大学MIS系统</h2>
-                <p class="card-description">直接访问北京交通大学官方MIS系统，体验系统功能与界面设计，了解系统在实际环境中的运行状态。</p>
+                <p class="card-description">直接访问北京交通大学官方MIS系统，体验系统功能与界面设计。</p>
                 <div class="card-buttons">
                     <a href="http://mis.bjtu.edu.cn" target="_blank" class="btn btn-secondary">访问MIS系统</a>
                 </div>
@@ -308,7 +307,7 @@
         </div>
         
         <footer>
-            <p>北京交通大学 计算机与信息技术学院 | 云计算与大数据实验项目</p>
+            <p>北京交通大学 计算机与信息技术学院 | 虚拟化云计算实验项目</p>
             <p>© 2025 北京交通大学 版权所有</p>
         </footer>
     </div>
