--- a/mis.html
+++ b/mis.html
@@ -163,7 +163,7 @@
     <div class="container">
         <header>
             <h1>北京交通大学MIS系统访问量统计</h1>
-            <p class="subtitle">实时监控与数据分析平台</p>
+            <p class="subtitle">监控与数据分析平台</p>
         </header>
         
         <div class="stats-overview">
@@ -221,7 +221,7 @@
         </div>
         
         <footer>
-            <p>北京交通大学 信息中心 | 数据更新时间: 2023年11月15日 15:30</p>
+            <p>北京交通大学 信息中心| 数据更新时间: 2023年11月15日 15:30</p>
             <p>© 2023 北京交通大学 MIS系统管理中心</p>
         </footer>
     </div>
@@ -374,4 +374,5 @@
         });
     </script>
 </body>
+
 </html>
