Fix HTML encoding issues in mis.html

--- a/mis.html
+++ b/mis.html
@@ -189,13 +189,6 @@
             </div>
         </div>
         
-        <div class="time-selector">
-            <button class="time-btn active" data-period="day">日视图</button>
-            <button class="time-btn" data-period="week">周视图</button>
-            <button class="time-btn" data-period="month">月视图</button>
-            <button class="time-btn" data-period="year">年视图</button>
-        </div>
-        
         <div class="chart-container">
             <div class="chart-row">
                 <div class="chart-box">
@@ -296,7 +289,7 @@
                         x: {
                             title: {
                                 display: true,
-                                text: '时间段'
+                                text: '时间段（10月15日）'
                             }
                         }
                     }
@@ -376,3 +369,4 @@
 </body>
 
 </html>
+
